added first intro

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-# rohanralli.github.io
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Personal Portfolio Website</title>
+        <style>
+            
+        </style>
+    </head>
+    <body>
+        <h1>
+          Hey, I'm Rohan!
+        </h1>
+    </body>
+</html>
