--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <meta charset="utf-8">
         <title>Personal Portfolio Website</title>
         <style>
-            
+            #greeting{
+                align:center;
+            }
         </style>
     </head>
     <body>
-        <h1>
+        <h1 id = "greeting">
           Hey, I'm Rohan!
         </h1>
     </body>
