--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Personal Portfolio Website</title>
         <style>
             #greeting{
-                align:center;
+                text-align:center;
             }
         </style>
     </head>
