--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <h1 id = "greeting">
           Hey, I'm Rohan!
         </h1>
+        <img src="https://drive.google.com/file/d/19erhFyWH6uWLUQUeQEBk5BufrpTLCTVE/view">
     </body>
 </html>
