--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Personal Portfolio Website</title>
         <style>
-            #greeting{
+            h1{
                 text-align:center;
             }
         </style>
@@ -14,5 +14,8 @@
           Hey, I'm Rohan!
         </h1>
         <img src="https://drive.google.com/file/d/19erhFyWH6uWLUQUeQEBk5BufrpTLCTVE/view">
+        <h1>
+          About Me
+        </h1>
     </body>
 </html>
