--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
             h1{
                 text-align:center;
             }
+            #mepic{
+                position:relative;
+                left:50%;
+            }
         </style>
     </head>
     <body>
         <h1 id = "greeting">
           Hey, I'm Rohan!
         </h1>
-        <img src="https://drive.google.com/file/d/19erhFyWH6uWLUQUeQEBk5BufrpTLCTVE/view">
+        <a href="https://lh3.googleusercontent.com/pw/AIL4fc94jk09jYB4TJqMJsoAGqHX6i9IejgcfKxJOJVmI87YistL3uddr85kb5Kq4iBAS6RqVrOES73bYqGLt4NyPidjy6e9xOhA
+            oVU8N3XfqusoGAfElpU=w2400?source=screenshot.guru"> 
+        <img id = "mepic"src="https://lh3.googleusercontent.com/pw/AIL4fc94jk09jYB4TJqMJsoAGqHX6i9IejgcfKxJOJVm
+        I87YistL3uddr85kb5Kq4iBAS6RqVrOES73bYqGLt4NyPidjy6e9xOhAoVU8N3XfqusoGAfElpU=w378-h315-p-k" /> </a>
+        
         <h1>
           About Me
         </h1>
     </body>
 </html>
+/*<img id = "mepic" src="https://drive.google.com/file/d/19erhFyWH6uWLUQUeQEBk5BufrpTLCTVE/view">*/
