--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <h1>
           About Me
         </h1>
+        <h1>
+          Education
+        </h1>
+        <h1>
+          Clubs/Organizations
+        </h1>
     </body>
 </html>
 /*<img id = "mepic" src="https://drive.google.com/file/d/19erhFyWH6uWLUQUeQEBk5BufrpTLCTVE/view">*/
