--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1 id = "greeting">
           Hey, I'm Rohan!
         </h1>
+        <img src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/888e824d-6283-4bf3-ac30-04bc1c975e4c" />
         <a href="https://lh3.googleusercontent.com/pw/AIL4fc94jk09jYB4TJqMJsoAGqHX6i9IejgcfKxJOJVmI87YistL3uddr85kb5Kq4iBAS6RqVrOES73bYqGLt4NyPidjy6e9xOhA
             oVU8N3XfqusoGAfElpU=w2400?source=screenshot.guru"> 
         <img id = "mepic"src="https://lh3.googleusercontent.com/pw/AIL4fc94jk09jYB4TJqMJsoAGqHX6i9IejgcfKxJOJVm
