--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             #mepic{
                 position:relative;
                 left:50%;
+                width:20%;
             }
         </style>
     </head>
@@ -17,11 +18,7 @@
         <h1 id = "greeting">
           Hey, I'm Rohan!
         </h1>
-        <img src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/888e824d-6283-4bf3-ac30-04bc1c975e4c" />
-        <a href="https://lh3.googleusercontent.com/pw/AIL4fc94jk09jYB4TJqMJsoAGqHX6i9IejgcfKxJOJVmI87YistL3uddr85kb5Kq4iBAS6RqVrOES73bYqGLt4NyPidjy6e9xOhA
-            oVU8N3XfqusoGAfElpU=w2400?source=screenshot.guru"> 
-        <img id = "mepic"src="https://lh3.googleusercontent.com/pw/AIL4fc94jk09jYB4TJqMJsoAGqHX6i9IejgcfKxJOJVm
-        I87YistL3uddr85kb5Kq4iBAS6RqVrOES73bYqGLt4NyPidjy6e9xOhAoVU8N3XfqusoGAfElpU=w378-h315-p-k" /> </a>
+        <img id="mepic" src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/888e824d-6283-4bf3-ac30-04bc1c975e4c" />
         
         <h1>
           About Me
@@ -34,4 +31,3 @@
         </h1>
     </body>
 </html>
-/*<img id = "mepic" src="https://drive.google.com/file/d/19erhFyWH6uWLUQUeQEBk5BufrpTLCTVE/view">*/
