--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
           #about{
             text-align:center;
             }
+          #education{
+            text-align:center;
+            }
+          #schoolName{
+            text-align:center;
+            font-weight:bold;
+          }
         </style>
     </head>
     <body>
@@ -105,6 +112,13 @@
         <h1>
           Education
         </h1>
+        <h3 id = "schoolName">
+          Centennial High School, 2020-2024
+        </h3> 
+        <p id = "education">
+          Grade: 12 <br>
+          GPA : 4.0/4.0 <br>  SAT Score: 1590 <br> Activities and societies: Computer Science Club, Robotics (Co-Captain), Choir (President), <br> Chess (Vice President), National Honors Society, National Spanish Honors Society
+        </p>
         <h1>
           Organizations/Extracurriculars
         </h1>
