--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             }
           #button1{
                 position:absolute;
-                top:37%;
+                top:38%;
                 left:41%;
                 width:20%;
                 height:50px;
@@ -84,6 +84,9 @@
           #schoolName{
             text-align:center;
             font-weight:bold;
+          }
+          #orgs{
+            text-align:center;
           }
         </style>
     </head>
@@ -117,11 +120,14 @@
         </h3> 
         <p id = "education">
           Grade: 12 <br>
-          GPA : 4.0/4.0 <br>  SAT Score: 1590 <br> Activities and societies: Computer Science Club, Robotics (Co-Captain), Choir (President), <br> Chess (Vice President), National Honors Society, National Spanish Honors Society
+          GPA : 4.0/4.0 <br>  SAT Score: 1590 <br> 
         </p>
         <h1>
           Organizations/Extracurriculars
         </h1>
+        <p id = "orgs">
+          CodeWorld(Founder), Computer Science Club, Robotics (Co-Captain), Choir (President), <br> Chess (Vice President), National Honors Society, National Spanish Honors Society
+        </p>
         <h1>
           Awards/Certifications
         </h1>
