--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
             if (document.getElementById("button1").innerHTML == "Rohan!"){
                 document.getElementById("button1").innerHTML = "an upcoming CS Major!";
                 document.getElementById("button1").style.height = "80px";
+                document.getElementById("clickMe").style.top = "44%";
             }
             else if(document.getElementById("button1").innerHTML == "an upcoming CS Major!"){
               document.getElementById("button1").innerHTML = "a machine learning student!";
               document.getElementById("button1").style.height = "80px";
+              //document.getElementById("clickMe").style.top = "44%";
             }
             else{
                 document.getElementById("button1").innerHTML = "Rohan!";
                 document.getElementById("button1").style.height = "50px";
+                document.getElementById("clickMe").style.top = "40%";
             }
           }
         </script>
@@ -191,7 +194,7 @@
           <span class = "wExpTitle">Dairy Queen/ Paid front office team member / May 2022 – July 2022</span><br>
           Supported DQ staff in administrative activities / 8 hours/week -- 12 weeks/year<br>
           <span class = "wExpTitle">Chick-Fill-A / Paid back-office team member / July 2022 – November 2022</span><br>
-          Supported staff in accurate and speedy order fulfillment and delivery / 5 hours/week -- 12 weeks<br>
+          Supported staff in accurate and quick order fulfillment and delivery / 5 hours/week -- 12 weeks<br>
 
         </p>
         </div>
