--- a/index.html
+++ b/index.html
@@ -88,8 +88,15 @@
             text-align:center;
             }
           #education{
+            position: relative;
+            left:40%;
             text-align:center;
+            background-color: rgb(64,224,208);
+            width: 20%;
             }
+          #edHead{
+            font-size:33px;
+          }
           #schoolName{
             text-align:center;
             font-weight:bold;
@@ -138,16 +145,18 @@
           that will not only equip me with the knowledge and skills necessary
           to push<br>  the outer realm of the world of technology but also help me give back to the community.
         </p>
-        <h1>
+        <section id = "education">
+        <h1 id = "edHead">
           Education
         </h1>
         <h3 id = "schoolName">
           Centennial High School, 2020-2024
-        </h3> 
-        <p id = "education">
+        </h3>
+        <p>
           Grade: 12 <br>
           GPA : 4.0/4.0 <br>  FISD Gifted and Talented Program <br> 
         </p>
+        </section>
         <h1>
           Organizations/Extracurriculars
         </h1>
