--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             position:absolute;
             text-align:center;
             top:14vw;
-            left:45%;
+            left:46%;
             color:white;
           }
           #mepic{
@@ -70,6 +70,7 @@
                 top:650px;
                 left:40%;
                 width:20%;
+                border-radius: 25px;
             }
           #button1{
                 position:absolute;
@@ -83,6 +84,7 @@
                 position:absolute;
                 top:40%;
                 left:41%;
+            border-radius: 25px;
           }
           #about{
             position: relative;
@@ -90,6 +92,7 @@
             text-align:center;
             background-color: rgb(64,224,208);
             width: 45%;
+            border-radius: 25px;
             }
           #education{
             position: relative;
@@ -97,6 +100,7 @@
             text-align:center;
             background-color: rgb(64,224,208);
             width: 20%;
+            border-radius: 25px;
             }
           .header{
             font-size:33px;
@@ -104,30 +108,43 @@
           #schoolName{
             text-align:center;
             font-weight:bold;
+            border-radius: 25px;
           }
           #orgs{
             position: relative;
-            left:30%;
+            left:20vw;
             text-align:center;
             background-color: rgb(64,224,208);
-            width: 40%;
+            width: 60vw;
+            border-radius: 25px;
           }
           #workExp{
+            position: relative;
+            left:25vw;
             text-align:center;
+            background-color: rgb(64,224,208);
+            width: 50vw;
             line-height:30px;
+            border-radius: 25px;
           }
           .wExpTitle{
             font-weight:bold;
           }
           #scores{
+            position: relative;
+            left:35vw;
             text-align:center;
+            background-color: rgb(64,224,208);
+            width: 30vw;
+            border-radius: 25px;
           }
           #awards{
             position: relative;
-            left:30%;
+            left:24vw;
             text-align:center;
             background-color: rgb(64,224,208);
-            width: 40%;
+            width: 50vw;
+            border-radius: 25px;
           }
         </style>
     </head>
@@ -200,10 +217,11 @@
           Presidential Award - 8<br>
         </p>
         </section>
+        <section id = "scores">
         <h1 class = "header">
           Test Scores
         </h1>
-        <p id = "scores">
+        <p>
           SAT Score: 1590<br>          
           AP Calculus AB- Score: 5/5 · May 2023<br>
           AP English Language and Composition- Score: 5/5 · May 2023<br>
@@ -212,18 +230,20 @@
           AP Computer Science A- Score: 5/5 · May 2022<br>
           AP World History- Score: 5/5 · May 2022<br>
         </p>
+        </section>
+        <section id = "workExp">
         <h1 class = "header">
           Work Experience
         </h1>
-        <p id = "workExp">
+        <p>
           <span class = "wExpTitle">Kumon / Paid Tutor / March 2022 – May 2022</span><br>
           Taught fundamentals of Math and English to kids age 5 to 16 / 5 hours/week – 12 weeks/year<br>
           <span class = "wExpTitle">Dairy Queen/ Paid front office team member / May 2022 – July 2022</span><br>
           Supported DQ staff in administrative activities / 8 hours/week -- 12 weeks/year<br>
           <span class = "wExpTitle">Chick-Fill-A / Paid back-office team member / July 2022 – November 2022</span><br>
           Supported staff in accurate and quick order fulfillment and delivery / 5 hours/week -- 12 weeks<br>
-
         </p>
+        </section>
         </div>
     </body>
 </html>
