--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
                 left:40%;
                 width:20%;
                 height:50px;
-                font-size: 30px
+                font-size: 30px;
+                border-radius: 25px;
             }
+          #button1:hover{
+            background-color: black;
+            color: orange;
+          }
           #clickMe{
                 position:absolute;
                 top:40%;
