--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 justify-content: center;
               }
           body{
-            background-color:rgb(25,210,50);
+            background-color:#A020F0;
           }
           h1{
                 text-align:center;
@@ -99,6 +99,10 @@
             width: 45%;
             border-radius: 25px;
             }
+          #about:hover{
+            background-color: black;
+            color:white
+          }
           #education{
             position: relative;
             left:40%;
@@ -107,6 +111,10 @@
             width: 20%;
             border-radius: 25px;
             }
+          #education:hover{
+            background-color: black;
+            color:white
+          }
           .header{
             font-size:33px;
           }
@@ -123,6 +131,10 @@
             width: 60vw;
             border-radius: 25px;
           }
+          #orgs:hover{
+            background-color: black;
+            color:white
+          }
           #workExp{
             position: relative;
             left:25vw;
@@ -131,6 +143,10 @@
             width: 50vw;
             line-height:30px;
             border-radius: 25px;
+          }
+          #workExp:hover{
+            background-color: black;
+            color:white
           }
           .wExpTitle{
             font-weight:bold;
@@ -143,6 +159,10 @@
             width: 30vw;
             border-radius: 25px;
           }
+          #scores:hover{
+            background-color: black;
+            color:white
+          }
           #awards{
             position: relative;
             left:24vw;
@@ -150,6 +170,13 @@
             background-color: rgb(64,224,208);
             width: 50vw;
             border-radius: 25px;
+          }
+          #awards:hover{
+            background-color: black;
+            color:white
+          }
+          .sect:hover{
+            
           }
         </style>
     </head>
@@ -171,7 +198,7 @@
         </p>
           
         <img id="mepic" src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/a5ce4a59-51ac-45de-ab81-9a06c4d3ce93" />
-        <section id = "about">
+        <section id = "about" class = "sect">
         <h1 class = "header">
           About Me
         </h1>
@@ -181,7 +208,7 @@
           to push<br>  the outer realm of the world of technology but also help me give back to the community.
         </p>
           </section>
-        <section id = "education">
+        <section id = "education" class = "sect">
         <h1 class = "header">
           Education
         </h1>
@@ -193,7 +220,7 @@
           GPA : 4.0/4.0 <br>  FISD Gifted and Talented Program <br> 
         </p>
         </section>
-        <section id = "orgs">
+        <section id = "orgs" class = "sect">
         <h1 class = "header">
           Organizations/Extracurriculars
         </h1>
@@ -201,7 +228,7 @@
           CodeWorld(Founder), Computer Science Club, Robotics (Co-Captain), Choir (President), <br> Chess (Vice President), National Honors Society, National Spanish Honors Society
         </p>
         </section>
-        <section id = "awards">
+        <section id = "awards" class = "sect">
         <h1 class = "header">
           Awards
         </h1>
@@ -222,7 +249,7 @@
           Presidential Award - 8<br>
         </p>
         </section>
-        <section id = "scores">
+        <section id = "scores" class = "sect">
         <h1 class = "header">
           Test Scores
         </h1>
@@ -236,7 +263,7 @@
           AP World History- Score: 5/5 · May 2022<br>
         </p>
         </section>
-        <section id = "workExp">
+        <section id = "workExp" class = "sect">
         <h1 class = "header">
           Work Experience
         </h1>
