--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 top: 0;
                 left: 0;
                 z-index:0;
+                border-radius: 25px;
                 }
           .video-wrapper {
                 /* Telling our absolute positioned video to 
@@ -72,6 +73,9 @@
                 width:20%;
                 border-radius: 25px;
             }
+          #linkedin{
+            text-align:center;
+          }
           #button1{
                 position:absolute;
                 top:20vw;
@@ -198,6 +202,9 @@
         </p>
           
         <img id="mepic" src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/a5ce4a59-51ac-45de-ab81-9a06c4d3ce93" />
+        <section id = "linkedin">
+          <a href = "https://www.linkedin.com/in/rohan-ralli-3389a2273" target = "_blank">LinkedIn</a>
+        </section>
         <section id = "about" class = "sect">
         <h1 class = "header">
           About Me
@@ -208,6 +215,7 @@
           to push<br>  the outer realm of the world of technology but also help me give back to the community.
         </p>
           </section>
+        
         <section id = "education" class = "sect">
         <h1 class = "header">
           Education
