--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 document.getElementById("clickMe").style.top = "40%";
             }
           }
+
         </script>
         <style>
           video {
@@ -73,9 +74,6 @@
                 width:20%;
                 border-radius: 25px;
             }
-          #linkedin{
-            text-align:center;
-          }
           #button1{
                 position:absolute;
                 top:20vw;
@@ -88,6 +86,22 @@
           #button1:hover{
             background-color: black;
             color: orange;
+          }
+          #LinkedIn{
+                position:absolute;
+                top: 65vw;
+                left:47.5%;
+                width:5%;
+                height:50px;
+                font-size: 10px;
+                border-radius: 25px;
+            }
+          #LinkedIn:hover{
+            background-color: gray;
+            color: blue;   
+          }
+          #linkin{
+            font-weight: bold;
           }
           #clickMe{
                 position:absolute;
@@ -102,6 +116,7 @@
             background-color: rgb(64,224,208);
             width: 45%;
             border-radius: 25px;
+  
             }
           #about:hover{
             background-color: black;
@@ -121,6 +136,7 @@
           }
           .header{
             font-size:33px;
+            -webkit-text-stroke: 1px purple
           }
           #schoolName{
             text-align:center;
@@ -202,9 +218,7 @@
         </p>
           
         <img id="mepic" src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/a5ce4a59-51ac-45de-ab81-9a06c4d3ce93" />
-        <section id = "linkedin">
-          <a href = "https://www.linkedin.com/in/rohan-ralli-3389a2273" target = "_blank">LinkedIn</a>
-        </section>
+        <a href="https://www.linkedin.com/in/rohan-ralli-3389a2273" target="_blank"><button id = "LinkedIn" ><span id = "linkin">LinkedIn</span></button></a>
         <section id = "about" class = "sect">
         <h1 class = "header">
           About Me
