--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                 text-align:center;
                 position:relative;
             }
+          #tableOfContents{
+            text-align:center;
+            position:absolute;
+            top:25vw;
+            left:42%;
+            color:white;
+          }
           #greeting{
             position:absolute;
             text-align:center;
@@ -207,8 +214,16 @@
 </video>
       </div>
       <div>
-        
-      
+        <section id = "tableOfContents">
+          <h2>
+        <a href = "#LinkedIn">About</a><br>
+        <a href = "#about">Education</a><br>
+        <a href = "#education">Orgs/Extracurriculars</a><br>
+        <a href = "#orgs">Awards</a><br>
+        <a href = "#awards">Test Scores</a><br>
+        <a href = "#scores">Work Experience</a>
+        </h2>
+        </section>
         <h1 id = "greeting">
           Hey, I'm
         </h1>
