--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           #LinkedIn{
                 position:absolute;
                 top: 65vw;
-                left:47.5%;
+                left:45%;
                 width:5%;
                 height:50px;
                 font-size: 10px;
@@ -108,6 +108,22 @@
             color: blue;   
           }
           #linkin{
+            font-weight: bold;
+          }
+          #Resume{
+                position:absolute;
+                top: 65vw;
+                left:51%;
+                width:5%;
+                height:50px;
+                font-size: 10px;
+                border-radius: 25px;
+            }
+          #Resume:hover{
+            background-color: gray;
+            color: blue;   
+          }
+          #resume{
             font-weight: bold;
           }
           #clickMe{
@@ -234,6 +250,7 @@
           
         <img id="mepic" src="https://github.com/rohanralli/rohanralli.github.io/assets/136884308/a5ce4a59-51ac-45de-ab81-9a06c4d3ce93" />
         <a href="https://www.linkedin.com/in/rohan-ralli-3389a2273" target="_blank"><button id = "LinkedIn" ><span id = "linkin">LinkedIn</span></button></a>
+        <a href="https://docs.google.com/document/d/1iAiF0f_9xkfoQNr77CcaJSxA3aXvlJX90fPY6YlCvR8/edit?usp=sharing" target="_blank"><button id = "Resume" ><span id = "resume">Resume</span></button></a>
         <section id = "about" class = "sect">
         <h1 class = "header">
           About Me
