--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 justify-content: center;
               }
           body{
-            background-color:#A020F0;
+            background-color:#8458B3;
           }
           h1{
                 text-align:center;
@@ -159,7 +159,6 @@
           }
           .header{
             font-size:33px;
-            -webkit-text-stroke: 1px purple
           }
           #schoolName{
             text-align:center;
