--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <script>
           function changeDescription() {
             if (document.getElementById("button1").innerHTML == "Rohan!"){
-                document.getElementById("button1").innerHTML = "an upcoming CS Major!";
+                document.getElementById("button1").innerHTML = "a CS Major!";
                 document.getElementById("button1").style.height = "80px";
                 document.getElementById("clickMe").style.top = "44%";
             }
-            else if(document.getElementById("button1").innerHTML == "an upcoming CS Major!"){
+            else if(document.getElementById("button1").innerHTML == "a CS Major!"){
               document.getElementById("button1").innerHTML = "a machine learning student!";
               document.getElementById("button1").style.height = "80px";
               //document.getElementById("clickMe").style.top = "44%";
@@ -255,9 +255,10 @@
           About Me
         </h1>
         <p>
-          As an aspiring Computer Science major with focus on Machine Learning/Artificial Intelligence, <br> I eagerly look forward to pursuing my bachelor's degree from an institution of higher studies<br>
-          that will not only equip me with the knowledge and skills necessary
-          to push<br>  the outer realm of the world of technology but also help me give back to the community.
+          As a computer science major at The University of Texas at Austin, I’m fascinated by how CS can transform ideas into tangible impact — from algorithms that learn and adapt, to 
+            systems that process vast amounts of data in milliseconds. My curiosity for machine learning, artificial intelligence, and problem-solving drives me to explore how technology
+            can address complex challenges in innovative ways. I’m eager to apply my knowledge to environments where creativity and technical skill meet real-world applications, whether
+            that’s optimizing a process, building intelligent tools, or creating seamless user experiences.
         </p>
           </section>
         
