--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
           }
           #education{
             position: relative;
-            left:40%;
+            left:32.5%;
             text-align:center;
             background-color: rgb(64,224,208);
-            width: 20%;
+            width: 35%;
             border-radius: 25px;
             }
           #education:hover{
@@ -164,18 +164,6 @@
             text-align:center;
             font-weight:bold;
             border-radius: 25px;
-          }
-          #orgs{
-            position: relative;
-            left:20vw;
-            text-align:center;
-            background-color: rgb(64,224,208);
-            width: 60vw;
-            border-radius: 25px;
-          }
-          #orgs:hover{
-            background-color: black;
-            color:white
           }
           #workExp{
             position: relative;
@@ -267,19 +255,16 @@
           Education
         </h1>
         <h3 id = "schoolName">
-          Centennial High School, 2020-2024
+          The University of Texas at Austin, 2024-2027
         </h3>
         <p>
-          Grade: 12 <br>
-          GPA : 4.0/4.0 <br>  FISD Gifted and Talented Program <br> 
-        </p>
-        </section>
-        <section id = "orgs" class = "sect">
-        <h1 class = "header">
-          Organizations/Extracurriculars
-        </h1>
-        <p>
-          CodeWorld(Founder), Computer Science Club, Robotics (Co-Captain), Choir (President), <br> Chess (Vice President), National Honors Society, National Spanish Honors Society
+          Grade: Sophomore <br>
+          GPA : 3.78/4.00 <br><br>  
+          Relevant Coursework: Data Structures, Discrete Mathematics, 
+          Computer Architecture, Statistics/Probability, 
+          Operating Systems(in progress) <br><br> 
+          Activities and societies: Engineering & Computational Learning of 
+          AI in Robotics, Association for Computing Machinery, Texas Exes
         </p>
         </section>
         <section id = "awards" class = "sect">
