--- a/index.html
+++ b/index.html
@@ -272,20 +272,14 @@
           Awards
         </h1>
         <p>
-          2024 National Merit Scholarship Program Semifinalist - 12<br>
-          AP Scholar with distinction – 11<br>
-          3x Honor Roll – 9, 10, 11<br>
-          1st place in VEX ausTIN CANS Tipping Point Robotics regional competition (State Qualifier) - 10<br>
-          Semi-Finalist at ‘For the Love of BOTS’ VEX Robotics regional competition - 11<br>
-          Placed 14th at  Area (State) –  Texas All State Choir competition– 11<br>
-          Top 20 at Area (State)  – Texas All State Choir competition – 10, 11<br>
-          2nd Chair for pre-area round – Texas All State Choir competition – 11<br>
-          3-Time All Region Choir - 9, 10, 11<br>
-          Highest rating (Superior +) by judges at TMEA Solo Contest competition - 9<br>
-          6 times Gold Medalist in Annual Piano Music Theory Exams<br>
-          6 times Piano Superior+ rating in Sonatina, American, Fall festivals<br>
-          Inducted in National Honor Society and National Spanish Honor Society based on academic excellence and community service.<br>
-          Presidential Award - 8<br>
+          
+		UT Austin Texas Exes General Scholarship - 2024<br>
+        Centennial HS Choir Scholarship - 2024<br>
+        National Merit Scholarship Program Finalist - 2024<br>
+        Business Professionals of America (BPA) State Leadership Conference Qualifier - 2024<br>
+        Forty Acres Scholars Program Finalist - 2024<br>
+        Selected as Candidate for U.S. Presidential Scholars Program - 2024<br>
+        AP Scholar with Distinction - 2023<br>
         </p>
         </section>
         <section id = "scores" class = "sect">
